Implementato ordinamento degli elenchi

--- a/src/main/resources/templates/update-competition.html
+++ b/src/main/resources/templates/update-competition.html
@@ -58,6 +58,9 @@
 								</div>
 							</div>
 						</div>
+						
+						<input type="hidden" th:field="*{id}" />
+						<input type="hidden" th:field="*{playedMatches}" />
 
 						<div class="d-grid">
 							<button type="submit"
