--- a/src/main/resources/templates/update-played-match.html
+++ b/src/main/resources/templates/update-played-match.html
@@ -63,6 +63,9 @@
 								</div>
 							</div>
 						</div>
+						
+						<input type="hidden" th:field="*{id}" />
+						<input type="hidden" th:field="*{competition}" />
 
 						<div class="d-grid">
 							<button type="submit" class="btn text-white gradient-custom-2">Crea</button>
