--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
 <body>
 	<main class="h-100">
 
-	<div class="container mt-5">
+	<div class="container my-5">
 
 		<div class="d-flex justify-content-between bg-white rounded">
 
