--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <body>
 	<main class="h-100">
 
-	<div class="container mt-5 pb-5">
+	<div class="container my-5 pb-5">
 
 		<div class="d-flex justify-content-between bg-white rounded">
 
