--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -23,6 +23,8 @@
 		
 		<script src="https://kit.fontawesome.com/381144165f.js" crossorigin="anonymous"></script>
 		
+		<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}">
+		
 	</head>
 	
 	<body>
