--- a/src/main/resources/templates/update-competition.html
+++ b/src/main/resources/templates/update-competition.html
@@ -12,7 +12,7 @@
 		<div class="container container-custom-form">
 			<div class="card my-3">
 				<div class="card-header">
-					<h3 class="text-tertiary-color text-center mb-0">Crea competizione</h3>
+					<h3 class="text-tertiary-color text-center mb-0">Modifica competizione</h3>
 				</div>
 				<div class="card-body p-5">
 
@@ -64,7 +64,7 @@
 
 						<div class="d-grid">
 							<button type="submit"
-								class="btn text-white gradient-custom-2 float-right mr-4">Crea</button>
+								class="btn text-white gradient-custom-2 float-right mr-4">Salva modifiche</button>
 						</div>
 					</form>
 
