--- a/src/main/resources/templates/update-event.html
+++ b/src/main/resources/templates/update-event.html
@@ -47,7 +47,7 @@
 						<input type="hidden" th:field="*{participants}" />
 						
 						<div class="d-grid">
-							<button type="submit" class="btn text-white gradient-custom-2">Crea</button>
+							<button type="submit" class="btn text-white gradient-custom-2">Salva modifiche</button>
 						</div>
 
 					</form>
